--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
               </div>
             </div>
             <div class="card ms-4 me-4">
-              <img src="img/b1.jpg" class="card-img-top product-img" alt="...">
+              <img src="img/b3.jpg" class="card-img-top product-img" alt="...">
               <div class="card-body">
-                <h5 class="card-title product-name">دستبند نقره طرح پنتر</h5>
-                <p class="card-text product-price">3650.000 تومان</p>
+                <h5 class="card-title product-name">دستبند نقره کارتیر نگین دار</h5>
+                <p class="card-text product-price">2250.000 تومان</p>
                 <button class="btn btn-outline-dark" data-action="add-to-cart">افزودن به سبد خرید <i class="fa-solid fa-cart-shopping"></i></button>
               </div>
             </div>
